# Project_PW_Back-end

./: Dockerfile  README.md  docker-compose.yml  notes.txt  pyproject.toml  startup.sh
alembic/: env.py
alembic/versions/: 33693897a21f_create_table.py  83eeb1d2da46_create_products_table.py
app/: __init__.py  main.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  products.py
app/core/: config.py  security.py
app/crud/: crud_product.py  crud_user.py  product.py
app/database/: base.py  session.py  sessions.py
app/model/: product.py  user.py
app/schema/: product.py  token.py  user.py
core/: config.py
