[tool.poetry]
name = "project_pw_back-end"
version = "0.1.0"
description = "API para gestionar los productos de una tienda"
authors = ["LuisEGM <gamezluis777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
