[tool.poetry]
name = "project_pw_back-end"
version = "0.1.0"
description = "API para gestionar los productos de una tienda"
authors = ["LuisEGM <gamezluis777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.2"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
PyJWT = "2.3.0"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
